<resources>
    <string name="permission_not_satisfied" translatable="false">all permissions is not satisfied.</string>
    <string name="permission_requirement_cancelled" translatable="false">permission requirement was cancelled.</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_camera_flash">Flash</string>
    <string name="pref_default_camera_flash">auto</string>
    <string-array name="pref_list_label_camera_flash">
        <item>Flash Auto</item>
        <item>Flash On</item>
        <item>Flash Off</item>
    </string-array>
    <string-array name="pref_list_value_camera_flash">
        <item>auto</item>
        <item>on</item>
        <item>off</item>
    </string-array>
    <string name="pref_title_camera_grid_line">Grid Line</string>
    <string name="pref_default_camera_grid_line" translatable="false">false</string>
    <string-array name="pref_list_label_camera_grid_line">
        <item>Grid On</item>
        <item>Grid Off</item>
    </string-array>
    <string-array name="pref_list_value_camera_grid_line">
        <item>true</item>
        <item>false</item>
    </string-array>
    <string name="pref_title_camera_wb">Withe balance</string>
    <string name="pref_default_camera_wb" translatable="false">0</string>
    <string-array name="pref_list_label_camera_wb">
        <item>Auto</item>
        <item>Cloudy</item>
        <item>Incandescent</item>
        <item>Iridescent</item>
        <item>Sunny</item>
    </string-array>
    <string-array name="pref_list_value_camera_wb">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="pref_title_camera_exposure">Exposure</string>
    <string name="pref_default_camera_exposure" translatable="false">0</string>
    <string-array name="pref_list_label_camera_exposure">
        <item>-2</item>
        <item>-1</item>
        <item>0</item>
        <item>+1</item>
        <item>-1</item>
    </string-array>
    <string name="gallery_app_name" translatable="false">Gallery</string>
    <string name="pref_camera_ruler_off" translatable="false">off</string>
    <string name="pref_camera_ruler_brief" translatable="false">brief</string>
    <string name="pref_camera_ruler_detail" translatable="false">detail</string>
    <string name="video_camera_label">Camcorder</string>
    <string name="details_ms">%1$02d:%2$02d</string>
    <string name="details_hms">%1$d:%2$02d:%3$02d</string>
    <string name="set_image">Set picture as</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="share_panorama">Share panorama</string>
    <string name="share_as_photo">Share as photo</string>
    <string name="deleted">Deleted</string>
    <string name="undo">UNDO</string>
    <string name="details">Details</string>
    <string name="close">Close</string>
    <string name="show_on_map">Show on map</string>
    <string name="rotate_left">Rotate left</string>
    <string name="rotate_right">Rotate right</string>
    <string name="edit">Edit</string>
    <string name="crop_action">Crop</string>
    <string name="trim_action">Trim</string>
    <string name="set_as">Set as</string>
    <string name="video_err">Can\'t play video.</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="time">Time</string>
    <string name="location">Location</string>
    <string name="path">Path</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="orientation">Orientation</string>
    <string name="duration">Duration</string>
    <string name="mimetype">MIME type</string>
    <string name="file_size">File size</string>
    <string name="maker">Maker</string>
    <string name="model">Model</string>
    <string name="flash">Flash</string>
    <string name="aperture">Aperture</string>
    <string name="focal_length">Focal Length</string>
    <string name="white_balance">White balance</string>
    <string name="exposure_time">Exposure time</string>
    <string name="iso">ISO</string>
    <string name="unit_mm">mm</string>
    <string name="manual">Manual</string>
    <string name="auto">Auto</string>
    <string name="flash_on">Flash fired</string>
    <string name="flash_off">No flash</string>
    <string name="unknown">Unknown</string>
    <string name="try_to_set_local_album_available_offline">
        This item is stored locally and available offline.
    </string>
    <string name="please_wait">Please wait</string>
    <string name="camera_error_title">Camera error</string>
    <string name="error_cannot_connect_camera">Can\'t connect to the camera.</string>
    <string name="error_camera_disabled">Camera has been disabled because of security policies.</string>
    <string name="error_media_storage_failure">There was a problem saving your photo or video.</string>
    <string name="error_permissions">The app does not have critical permissions needed to run. Please check your
        permissions settings.
    </string>
    <string name="reason_storage_failure">Photo storage failure.</string>
    <string name="wait">Please wait\u2026</string>
    <string name="no_storage" product="default">Insert an SD card before using the camera.</string>
    <string name="preparing_sd" product="default">Preparing SD card\u2026</string>
    <string name="access_sd_fail" product="default">Couldn\'t access SD card.</string>
    <string name="time_lapse_title">Time lapse recording</string>
    <string name="feedback_description_camera_access">The app couldn\'t connect to the camera</string>
    <string name="feedback_description_save_photo">Photo or video did not save to the device.</string>
    <string name="capturing">Capturing</string>
    <string name="pref_camera_id_title">Choose camera</string>
    <string name="pref_camera_id_default" translatable="false">0</string>
    <string name="pref_camera_id_index_back" translatable="false">0</string>
    <string name="pref_camera_id_index_front" translatable="false">1</string>
    <string name="pref_camera_id_entry_back">Back</string>
    <string name="pref_camera_id_entry_front">Front</string>
    <string name="pref_camera_id_entry_back_value" translatable="false">0</string>
    <string name="pref_camera_id_entry_front_value" translatable="false">1</string>
    <string name="pref_camera_save_location_title">Save location</string>
    <string name="pref_camera_recordlocation_default" translatable="false">none</string>
    <string name="pref_camera_location_label">LOCATION</string>
    <string name="pref_camera_timer_title">Countdown timer</string>
    <string name="pref_camera_timer_default" translatable="false">0</string>
    <string name="pref_camera_timer_sound_default" translatable="false">@string/setting_on_value</string>
    <string name="pref_camera_timer_sound_title">Beep during countdown</string>
    <string name="setting_off">Off</string>
    <string name="setting_on">On</string>
    <string name="setting_off_value" translatable="false">off</string>
    <string name="setting_on_value" translatable="false">on</string>
    <string name="setting_none_value" translatable="false">none</string>
    <string name="pref_video_quality_title">Video quality</string>
    <string name="pref_video_quality_large" translatable="false">large</string>
    <string name="pref_video_quality_medium" translatable="false">medium</string>
    <string name="pref_video_quality_small" translatable="false">small</string>
    <string name="pref_video_time_lapse_frame_interval_title">Time lapse</string>
    <string name="pref_video_time_lapse_frame_interval_default" translatable="false">0</string>
    <string name="pref_camera_settings_category">Camera settings</string>
    <string name="pref_camcorder_settings_category">Camcorder settings</string>
    <string name="pref_camera_picturesize_title">Picture size</string>
    <string name="pref_camera_picturesize_entry_large">Large</string>
    <string name="pref_camera_picturesize_entry_medium">Medium</string>
    <string name="pref_camera_picturesize_entry_small">Small</string>
    <string name="pref_camera_picturesize_default" translatable="false">large</string>
    <string name="pref_camera_focusmode_title">Focus mode</string>
    <string name="pref_camera_focusmode_entry_auto">Auto</string>
    <string name="pref_camera_focusmode_entry_infinity">Infinity</string>
    <string name="pref_camera_focusmode_entry_macro">Macro</string>
    <string name="pref_camera_focusmode_label_auto">AUTO</string>
    <string name="pref_camera_focusmode_label_infinity">INFINITY</string>
    <string name="pref_camera_focusmode_label_macro">MACRO</string>
    <string name="pref_camera_hdr_supportmode_none" translatable="false">no_hdr</string>
    <string name="pref_camera_hdr_supportmode_hdr" translatable="false">hdr</string>
    <string name="pref_camera_hdr_supportmode_hdr_plus" translatable="false">hdr_plus</string>
    <string name="pref_camera_focusmode_default" translatable="false">continuous-picture</string>
    <string name="pref_camera_flashmode_default" translatable="false">auto</string>
    <string name="pref_camera_video_flashmode_default" translatable="false">off</string>
    <string name="pref_camera_hdr_plus_flashmode_default" translatable="false">off</string>
    <string name="pref_camera_flashmode_no_flash" translatable="false">no_flash</string>
    <string name="pref_camera_flashmode_title">Flash mode</string>
    <string name="pref_camera_flashmode_label">FLASH MODE</string>
    <string name="pref_camera_flashmode_entry_auto">Auto</string>
    <string name="label_longitude">Longitude:</string>
    <string name="label_latitude">Latitude:</string>
    <string name="label_action_geometry">Geometry</string>
    <string name="label_action_filter">Filter</string>
    <string name="label_action_tune">Tune</string>
    <string name="label_action_mark">Mark</string>
    <string name="app_title" translatable="false">TiXing</string>
    <string name="company_name" translatable="false">北京厚德天赢科技有限公司</string>
    <string name="copyright">Copyright©（2017）</string>
    <string name="dummy_content" translatable="false">DUMMY</string>
    <string name="action_name_case_view">Case</string>
    <string name="action_name_settings">Settings</string>
    <string name="action_name_gallery">Gallery</string>
    <string name="label_action_batch_delete">Batch Del</string>
    <string name="hint_operator">Operator</string>
    <string name="hint_case_name">Case Name</string>
    <string name="hint_comment">Description</string>
    <string name="label_level">Level:</string>
    <string name="label_create_date">Create Date:</string>
    <string name="label_location">Location:</string>
    <string name="action_name_export">Export</string>
    <string name="label_action_done">Done</string>
    <string name="label_action_cancel">Cancel</string>
    <string name="label_action_delete">Delete</string>
    <string name="label_action_edit">Edit</string>
    <string name="label_action_compare_split">左右比对</string>
    <string name="label_action_compare_overlap">重叠比对</string>
    <string name="label_action_take">拍照</string>
    <string name="label_action_choose">选取</string>
    <string name="label_action_swap_left">移左</string>
    <string name="label_action_swap_right">移右</string>
</resources>