<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartScreenActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_start_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/dummy_content"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/product" />

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txt_company_name"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/dummy_content"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/txt_company_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txt_copyright"
        android:text="@string/company_name"
        android:textAlignment="center"
        android:textColor="?attr/colorButtonNormal" />

    <TextView
        android:id="@+id/txt_copyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:text="@string/copyright"
        android:textAlignment="center"
        android:textColor="?attr/colorButtonNormal" />
</RelativeLayout>